--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
     // Check if isNewUser is true and display the welcome message
     if (isNewUser === 'true') {
         // Display a welcome message for new users
-        document.getElementById('welcome-message').textContent = 'Welcome! You are a new user. Please check your email and login.';
+        document.getElementById('welcome-message').textContent = 'Welcome! You are a new user. Please check your email';
     }
 </script>
     <div class="oq-header">
@@ -55,10 +55,10 @@
                         <img src="images/quiz_1.png" class="oq-logo"><br><br>
                         <form class="form" action="" method="post">
                             <p id="welcome-message"></p>
-                            <input type="text" class="form-control" placeholder="Enter Student Number"
-                                name="userid"><br>
+                            <input type="email" class="form-control" placeholder="Enter Email"
+                                name="email"><br>
                             <input type="password" class="form-control" placeholder="Enter Password"
-                                name="userpass"><br>
+                                name="password"><br>
 
 
                                 <br>
