--- a/views/lecturer/menu.ejs
+++ b/views/lecturer/menu.ejs
@@ -1,42 +1,8 @@
-<?php
-    session_start();
-    require_once('dbconfig.php');
-    $adminid = $_SESSION['adminsession'];
-    $_SESSION['adminsession'] = $adminid;
-    if($adminid == null){
-        header('Location: admin.php');
-    }
-    $result=mysqli_query($conn,"SELECT * FROM lecturer WHERE lecturer_number = '$adminid'");
-    if(mysqli_num_rows($result) > 0){
-        while($row = mysqli_fetch_assoc($result)) {
-            $flag = 0;
-            if(isset($_GET['createlang'])){
-                $subject_name = strtolower($_GET['subject_name']);
-                $subj_code = strtolower($_GET['subj_code']);
-
-                $_SESSION['subj_code'] = $subj_code;
-
-                $res1 = mysqli_query($conn,"SELECT * FROM subject WHERE subj_code  ='$subj_code'");
-                if(mysqli_num_rows($res1) > 0){
-                    $flag = 1;
-                }
-                else{
-                    if(mysqli_query($conn,"INSERT INTO subject(subj_name, subj_code) values('$subject_name','$subj_code' )")){
-                        $_SESSION['adminsession'] = $adminid;
-                        header("Location: viewtests.php?code=$subj_code");
-                    }
-                    else{
-                        echo "error ".mysqli_error($conn);
-                    }
-                }
-            }
-        ?>
-
 <!DOCTYPE html>
 <html>
 
 <head>
-    <title>Welcome Online Exam</title>
+    <title>Welcome to edu exam</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
@@ -45,9 +11,7 @@
     <meta name="description" content="Online Exam">
     <meta name="author" content="Sukanya Ledalla, Akhil Regonda, Nishanth Kadapakonda">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <?php
-                        require_once('dbconfig.php');
-                    ?>
+
 </head>
 
 <body>
@@ -59,7 +23,10 @@
                 </div>
                 <div class="col-md-8">
                     <div class="oq-userArea pull-right">
-                        <span class="oq-username"><?php echo $row['name'].' '.$row['surname'] ?> </span>
+                        <span class="oq-username">
+                            <!-- <?php echo $row['name'].' '.$row['surname'] ?>  -->
+                        
+                        </span>
                         <a class="oq-btn" href="logout.php?logout">Logout</a>
                     </div>
                 </div>
