--- a/views/lecturer/menu.ejs
+++ b/views/lecturer/menu.ejs
@@ -96,23 +96,17 @@
                                                     echo "<script>alert('language already exists');</script>";
                                                 }
                                             ?>
-                            <form class="form" id="create-question" method="post">
-                                <span class="oq-modalLangHead">Create new subject</span><br><br>
-                                <div class="col-md-2"></div>
-                                <div class="col-md-4">
-                                    <input type="text" class="form-control" placeholder="Enter the subject name"
-                                        name="subject_name" required> <br>
-                                    <input type="text" class="form-control" placeholder="Enter the subject code"
-                                        name="subj_code" required>
-                                </div>
-                                <div class="col-md-4">
-                                    <input type="text" class="form-control" placeholder="Enter the subject code"
-                                        name="code" required>
-                                </div>
-                                <div class="col-md-4">
-                                    <input type="submit" class="form-control oq-btn" value="Create" name="createlang">
-                                </div>
-                            </form>
+                                            <form class="form" id="create-module" method="post">
+                                                <span class="oq-modalLangHead">Create new module</span><br><br>
+                                                <div class="col-md-2"></div>
+                                                <div class="col-md-4">
+                                                    <input type="text" class="form-control" placeholder="Enter the module name" name="module_name" required> <br>
+                                                    <input type="text" class="form-control" placeholder="Enter the module code" name="module_code" required>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <input type="submit" class="form-control oq-btn" value="Create" name="createModule">
+                                                </div>
+                                            </form>
                         </div><br><br>
                     </div>
                 </div>
