Fix and new features
Fix login/register
Add authentication
CRUD for module init

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -61,8 +61,8 @@
                         
                             <select class="form-control" name="user_role">
                                 <option value="">Select Role</option>
-                                <option value="student">Student</option>
-                                <option value="Lecturer">Lecturer</option>
+                                <option value="STUDENT">Student</option>
+                                <option value="LECTURER">Lecturer</option>
                             </select>
                         
                             <br>
