--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,16 +16,7 @@
 
 <body>
     
-<script>
-    // Access the query parameter from the URL
-    const isNewUser = new URLSearchParams(window.location.search).get('isNewUser');
 
-    // Check if isNewUser is true and display the welcome message
-    if (isNewUser === 'true') {
-        // Display a welcome message for new users
-        document.getElementById('welcome-message').textContent = 'Welcome! You are a new user. Please check your email';
-    }
-</script>
     <div class="oq-header">
         <div class="container-fluid">
             <div class="row">
@@ -53,7 +44,7 @@
                 <div class="col-md-4 col-md-offset-1">
                     <div class="oq-login text-center">
                         <img src="images/quiz_1.png" class="oq-logo"><br><br>
-                        <form class="form" action="" method="post">
+                        <form class="form" id="login-form" action="" method="post">
                             <p id="welcome-message"></p>
                             <input type="email" class="form-control" placeholder="Enter Email"
                                 name="email"><br>
@@ -73,6 +64,7 @@
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/loginHandler.js"></script>
 </body>
 
 </html>
