--- a/views/lecturer/menu.ejs
+++ b/views/lecturer/menu.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>Welcome to edu exam</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Josefin+Sans" rel="stylesheet">
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
                             <!-- <?php echo $row['name'].' '.$row['surname'] ?>  -->
                         
                         </span>
-                        <a class="oq-btn" href="logout.php?logout">Logout</a>
+                        <a class="oq-btn" href="/auth/logout">Logout</a>
                     </div>
                 </div>
             </div>
@@ -42,9 +42,9 @@
                             <img src="images/quiz_1.png" class="oq-logo"><br><br>
                         </div>
                         <a data-toggle="modal" data-target=".bs-example-modal-sm"><span
-                                class="flaticon-select-list"></span>&nbsp;&nbsp; Add/View Subjects</a><br><br>
+                                class="flaticon-select-list"></span>&nbsp;&nbsp; Add/View Module</a><br><br>
                         <a data-toggle="modal" data-target=".delete-sub"><span
-                                class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp; Delete a Subject</a><br><br>
+                                class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp; Delete a Module</a><br><br>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
 
 
 
-    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal fade bs-example-modal-sm" id="module-model" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -67,21 +67,16 @@
                     <div class="text-center">
                         <div class="row">
                             <form class="form" action="viewtests.php" method="get">
-                                <span class="oq-modalLangHead">Select the subject</span><br><br>
+                                <span class="oq-modalLangHead">Select the module</span><br><br>
                                 <div class="col-md-2"></div>
                                 <div class="col-md-4">
                                     <select class="form-control" name="code">
-                                        <?php
-                                                            $res2 = mysqli_query($conn,"SELECT * FROM subject");
-                                                            if(mysqli_num_rows($res2) > 0){
-                                                                while($row2 = mysqli_fetch_assoc($res2)){
-                                                                    echo "<option  value='$row2[subj_code]'>$row2[subj_name]</option>";
-                                                                }
-                                                            }
-                                                        ?>
-
+                                        <option value=''>Select Module</option>
+                                        <% modules.forEach(module => { %>
+                                            <option value="<%= module.module_code %>"><%= module.module_name %></option>
+                                        <% }); %>
                                     </select>
-                                </div>
+                                </div> <br>
                                 <div class="col-md-4">
                                     <input type="submit" class="form-control oq-btn" value="view tests" name="viewtest">
                                 </div>
@@ -91,18 +86,19 @@
                             <p>(or)</p>
                         </div><br>
                         <div class="row">
-                            <?php
+                            <!-- <?php
                                                 if($flag == 1){
                                                     echo "<script>alert('language already exists');</script>";
                                                 }
-                                            ?>
+                                            ?> -->
                                             <form class="form" id="create-module" method="post">
                                                 <span class="oq-modalLangHead">Create new module</span><br><br>
-                                                <div class="col-md-2"></div>
+                                                <div class="col-md-2" id="module-error"></div>
                                                 <div class="col-md-4">
                                                     <input type="text" class="form-control" placeholder="Enter the module name" name="module_name" required> <br>
                                                     <input type="text" class="form-control" placeholder="Enter the module code" name="module_code" required>
-                                                </div>
+                                                    <input type="hidden" value="<%=user.course_id%>" class="form-control" name="course_id" >
+                                                </div> <br>
                                                 <div class="col-md-4">
                                                     <input type="submit" class="form-control oq-btn" value="Create" name="createModule">
                                                 </div>
@@ -126,21 +122,15 @@
                 <div class="modal-body">
                     <div class="text-center">
                         <div class="row">
-                            <form class="form" action="quesdel.php" method="get">
-                                <span class="oq-modalLangHead">Delete the subject</span><br><br>
+                            <form id="delete-module-form" class="form" action="" method="post">
+                                <span class="oq-modalLangHead">Delete the module</span><br><br>
                                 <div class="col-md-2"></div>
                                 <div class="col-md-4">
                                     <select class="form-control" name="code">
-                                        <option disabled>Select Subject</option>
-                                        <?php
-                                                            $res2 = mysqli_query($conn,"SELECT * FROM subject");
-                                                            if(mysqli_num_rows($res2) > 0){
-                                                                while($row2 = mysqli_fetch_assoc($res2)){
-                                                                    echo "<option name='$row2[subj_code]'>$row2[subj_name]</option>";
-                                                                }
-                                                            }
-                                                        ?>
-
+                                        <option value=''>Select Module</option>
+                                        <% modules.forEach(module => { %>
+                                            <option value="<%= module.module_code %>"><%= module.module_name %></option>
+                                        <% }); %>
                                     </select>
                                 </div>
                                 <div class="col-md-4">
@@ -152,8 +142,8 @@
                         <div class="row">
                             <div class="col-md-2"></div>
                             <div class="col-md-8">
-                                <span class="oq-caution">*All the tests and questions of selected subject will be lost
-                                    if delete subject is pressed</span>
+                                <span class="oq-caution">*All the tests and questions of selected module will be lost
+                                    if delete module is pressed</span>
                             </div>
                         </div>
                         <br>
@@ -164,34 +154,24 @@
     </div>
 
 
-    <div class="oq-footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6"><span class="oq-footerText">ONLINE QUIZ 2023</span></div>
-                <div class="col-md-6"><span class="oq-footerText pull-right">Developed by - <a href="#"><span
-                                class="oq-footerBy">W<span class="oq-footerSubName">econvect</span> T<span
-                                    class="oq-footerSubName">ext</span></span></a></span></div>
-            </div>
-        </div>
-    </div>
+
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
 
 
     <script>
         // Create Question 
-        document.querySelector('#create-question').addEventListener('submit', function (event) {
+        document.querySelector('#create-module').addEventListener('submit', function (event) {
     event.preventDefault();
 
-    const form = document.querySelector('.form');
+    const form = document.querySelector('#create-module');
     const formData = new FormData(form);
 
     const jsonFormData = {};
     formData.forEach((value, key) => {
         jsonFormData[key] = value;
     });
-
-    fetch('http://localhost:5000/create-question', {
+    fetch('http://localhost:3000/module/create', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
@@ -205,17 +185,58 @@
         return response.json();
     })
     .then(data => {
-        if (data.status === true) {
-            console.log('Question created successfully!');
-            // Optionally, you can redirect or perform other actions upon successful creation
-        } else {
-            console.error(`Error: ${data.message}`);
-        }
-    })
+            if (data.status === true) {
+                console.log('Module created successfully!');
+                console.log(data);
+                // Close the modal
+                window.location.href = `/`;
+            } else {
+                console.error(`Error: ${data.message}`);
+                const errorDiv = document.querySelector('#module-error');
+                errorDiv.textContent = `Error: ${data.message}`;
+                errorDiv.classList.add('text-danger');
+            }
+        })
     .catch(error => {
-        console.error('There was a problem with the create question operation:', error);
+        console.error(`Error: ${data.message}`);
+        const errorDiv = document.querySelector('#module-error');
+                errorDiv.textContent = `Error: ${data.message}`;
+                errorDiv.classList.add('text-danger');
     });
 });
+
+
+// DELETE MODULE
+
+document.getElementById('delete-module-form').addEventListener('submit', function(event) {
+        event.preventDefault();
+
+        const formData = new FormData(this);
+
+        console.log(formData);
+
+        return;
+        
+        fetch('http://localhost:3000/module/delete', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            console.log('Module deleted successfully:', data);
+            // Optionally, you can perform additional actions upon successful deletion
+        })
+        .catch(error => {
+            console.error('There was a problem with the delete module operation:', error);
+        });
+    });
+
+
 
     </script>
 
