--- a/views/lecturer/menu.ejs
+++ b/views/lecturer/menu.ejs
@@ -24,7 +24,7 @@
                 <div class="col-md-8">
                     <div class="oq-userArea pull-right">
                         <span class="oq-username">
-                            <!-- <?php echo $row['name'].' '.$row['surname'] ?>  -->
+                            <%= user.first_name + ' ' + user.last_name %>
                         
                         </span>
                         <a class="oq-btn" href="/auth/logout">Logout</a>
@@ -70,17 +70,28 @@
                                 <span class="oq-modalLangHead">Select the module</span><br><br>
                                 <div class="col-md-2"></div>
                                 <div class="col-md-4">
-                                    <select class="form-control" name="code">
+                                    <select class="form-control" id="module-select" name="code">
                                         <option value=''>Select Module</option>
                                         <% modules.forEach(module => { %>
-                                            <option value="<%= module.module_code %>"><%= module.module_name %></option>
+                                            <option value="<%= module.module_id %>"><%= module.module_name %></option>
                                         <% }); %>
                                     </select>
                                 </div> <br>
                                 <div class="col-md-4">
-                                    <input type="submit" class="form-control oq-btn" value="view tests" name="viewtest">
+                                    <a id="view-tests-link" href="#" class="form-control oq-btn" name="viewtest">View Tests</a>
                                 </div>
                             </form>
+
+                <script>
+                    
+                    document.getElementById('module-select').addEventListener('change', function() {
+                                                const selectedModuleId = this.value;
+                                                const viewTestsLink = document.getElementById('view-tests-link');
+                                                viewTestsLink.href = `/test/view/${selectedModuleId}`;
+                                            });
+                </script>
+
+
                         </div><br><br>
                         <div class="text-center">
                             <p>(or)</p>
@@ -124,17 +135,19 @@
                         <div class="row">
                             <form id="delete-module-form" class="form" action="" method="post">
                                 <span class="oq-modalLangHead">Delete the module</span><br><br>
-                                <div class="col-md-2"></div>
+                                <div class="col-md-2" id="">
+
+                                </div>
                                 <div class="col-md-4">
-                                    <select class="form-control" id="module-select" name="code">
+                                    <select class="form-control" id="module-delete-select" name="module_id">
                                         <option value=''>Select Module</option>
                                         <% modules.forEach(module => { %>
-                                            <option value="<%= module.module_id %>"><%= module.module_name %></option>
+                                            <option value="<%=module.module_id %>"><%= module.module_name %></option>
                                         <% }); %>
                                     </select>
                                 </div> <br>
                                 <div class="col-md-4">
-                                    <input type="submit" class="form-control oq-deletebtn" value="Delete subject"
+                                    <input type="submit" class="form-control oq-deletebtn" value="Delete Module"
                                         name="subjectdelete">
                                 </div>
                             </form>
@@ -142,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-2"></div>
                             <div class="col-md-8">
-                                <span class="oq-caution">*All the tests and questions of selected module will be lost
+                                <span class="oq-caution" id="module-delete-error">*All the tests and questions of selected module will be lost
                                     if delete module is pressed</span>
                             </div>
                         </div>
@@ -172,11 +185,11 @@
         jsonFormData[key] = value;
     });
 
-    const deleteBtn = document.getElementById('oq-createbtn');
+    const createBtn = document.getElementById('oq-createbtn');
 
     // Show loading indicator
-    deleteBtn.disabled = true;
-    deleteBtn.value = 'Creating Module...';
+    createBtn.disabled = true;
+    createBtn.value = 'Creating Module...';
 
     fetch('http://localhost:3000/module/create', {
         method: 'POST',
@@ -218,8 +231,9 @@
 document.getElementById('delete-module-form').addEventListener('submit', function(event) {
         event.preventDefault();
 
-        const moduleId = document.getElementById('module-select').value;
         const deleteBtn = document.querySelector('.oq-deletebtn');
+
+        const moduleId = document.getElementById('module-delete-select').value;
 
         // Show loading indicator
         deleteBtn.disabled = true;
@@ -238,6 +252,15 @@ document.getElementById('delete-module-form').addEventListener('submit', functio
             window.location.href = `/`;
         })
         .catch(error => {
+
+            document.getElementById('module-delete-error').textContent = 'There was a problem with the delete module operation'
+
+            setTimeout(() => {
+    document.getElementById('module-delete-error').textContent = '*All the tests and questions of selected module will be lost if delete module is pressed';
+}, 5000);
+            deleteBtn.disabled = false;
+        deleteBtn.value = 'Delete Module';
+
             console.error('There was a problem with the delete module operation:', error);
         });
     });
