--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,15 +45,16 @@
                     <div class="oq-login text-center">
                         <img src="images/quiz_1.png" class="oq-logo"><br><br>
                         <form class="form" id="login-form" action="" method="post">
-                            <p id="welcome-message"></p>
+                            <p id="login-error-msg" style="color: rgb(230, 98, 98);" >
+                       
+                            </p>
                             <input type="email" class="form-control" placeholder="Enter Email"
                                 name="email"><br>
                             <input type="password" class="form-control" placeholder="Enter Password"
                                 name="password"><br>
 
-
                                 <br>
-                            <input type="submit" class="form-control oq-btn" value="Login" name="login"><br><br>
+                            <input type="submit" class="form-control oq-btn" value="Login" id="login" name="login"><br><br>
                             New user? <a href="signup.php" class="">Signup for New Account</a><br><br>
                         </form>
                     </div>
