--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
 
                                 <br>
                             <input type="submit" class="form-control oq-btn" value="Login" id="login" name="login"><br><br>
-                            New user? <a href="signup.php" class="">Signup for New Account</a><br><br>
+                            New user? <a href="/register" class="">Signup for New Account</a><br><br>
                         </form>
                     </div>
                 </div>
