--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,11 +19,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <div class=""><a href="index.php"><img src="images/quiz.png" class="oq-logo"></a></div>
+                    <div class=""><a href="/"><img src="images/quiz.png" class="oq-logo"></a></div>
                 </div>
                 <div class="col-md-8">
                     <div class="oq-userArea pull-right">
-                        <a href='menu.php'><span class='glyphicon glyphicon-home'></span>&nbsp;&nbsp;Home</a>
+                        <a href='/'><span class='glyphicon glyphicon-home'></span>&nbsp;&nbsp;Home</a>
                     </div>
                 </div>
             </div>
