--- a/views/register.ejs
+++ b/views/register.ejs
@@ -76,7 +76,7 @@
                         
                             <br><br>
                         
-                            <input type="submit" class="form-control btn btn-primary" value="Create Account" name="signup"><br><br>
+                            <input type="submit" id="register-btn" class="form-control btn btn-primary" value="Create Account" name="signup"><br><br>
                         </form>
                         
                     </div>
