--- a/views/lecturer/question.ejs
+++ b/views/lecturer/question.ejs
@@ -85,8 +85,8 @@
 
                                                 </div><br>
                                                 <br><br>
-                                                <input type="submit" class="form-control oq-btn" value="Create question"
-                                                    name="newques">
+                                               <!-- <input type="submit" class="form-control oq-btn" value="Create question"
+                                                    name="newques"> -->
                                             </form>
                                         </div>
                                     </div>
