--- a/views/lecturer/question.ejs
+++ b/views/lecturer/question.ejs
@@ -322,7 +322,7 @@
         const form = event.target.closest("form");
         if (!form) return; // If the submitted element is not a form, do nothing
 
-        if (form.id === "create-question-form") {
+        if (form.id === "update-question-form") {
           // Handle create question form submission
           event.preventDefault();
 
