--- a/views/register.ejs
+++ b/views/register.ejs
@@ -85,6 +85,9 @@
         </div>
     </div>
 
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/registerHandler.js"></script>
