--- a/views/lecturer/question.ejs
+++ b/views/lecturer/question.ejs
@@ -282,7 +282,7 @@
             jsonFormData[key] = value;
           });
 
-          fetch("https://eduexam-voice.onrender.com/question/create", {
+          fetch("http://localhost:3000/question/create", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
@@ -332,7 +332,7 @@
 
           const formData = new FormData(form);
 
-          fetch("https://eduexam-voice.onrender.com/question/create", {
+          fetch("http://localhost:3000/question/create", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
@@ -371,7 +371,7 @@
 
           const formData = new FormData(form);
 
-          fetch("https://eduexam-voice.onrender.com/question/update", {
+          fetch("http://localhost:3000/question/update", {
             method: "PUT",
             headers: {
               "Content-Type": "application/json",
@@ -407,7 +407,6 @@
         }
       });
 
-      //   document
       //     .querySelector("#update-question-form")
       //     .addEventListener("submit", function (event) {
       //       event.preventDefault();
