--- a/views/lecturer/test.ejs
+++ b/views/lecturer/test.ejs
@@ -265,7 +265,7 @@
           createBtn.disabled = true;
           createBtn.value = "Creating Test...";
 
-          fetch("https://eduexam-voice.onrender.com/test/create", {
+          fetch("http://localhost:3000/test/create", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
